# prosody-cs

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Directory.Build.props  LICENSE  Makefile  README.md  docker-compose.yaml  prosody-cs.sln  prosody-cs.slnx  release-please-config.json  uniffi.toml
.claude/skills/: csharp-async-guidance.md  csharp-coding-standards.md  dotnet-inspect.md
.github/: copilot-instructions.md
.github/workflows/: benchmarks.yml  ci.yaml  general.yaml  pr.yaml  quality.yaml  release.yaml
bench/Prosody.Benchmarks/: Prosody.Benchmarks.csproj  TracePropagationBenchmarks.cs
ffi/: Cargo.toml
ffi-build/: Cargo.toml  build.rs
ffi-build/src/: lib.rs
ffi-cdylib/: Cargo.toml
ffi-cdylib/src/: lib.rs
ffi/src/: admin.rs  callbacks.rs  cancellation.rs  client.rs  config.rs  context.rs  error.rs  events.rs  handler.rs  lib.rs  logging.rs  message.rs  runtime.rs  service.rs  timer.rs  types.rs
native/: Cargo.toml  build.rs
native/src/: client.rs  context.rs  handler.rs  lib.rs  runtime.rs  types.rs
src/Prosody/: AdminClient.cs  CancellationHelper.cs  ClientMode.cs  ClientOptions.cs  ClientOptionsValidator.cs  ConsumerState.cs  Context.cs  EventHandlerBridge.cs  Exceptions.cs  HandlerResultCode.cs  IEventContext.cs  IEventHandler.cs  IPermanentError.cs  IProsodyHandler.cs  Message.cs  NativeEventHandlerWrapper.cs  PermanentErrorAttribute.cs  PermanentException.cs  Prosody.cs  Prosody.csproj  ProsodyClient.cs  ProsodyClientBuilder.cs  ProsodyClientOptions.cs  ProsodyContext.cs  ProsodyLogging.cs  ProsodyServiceCollectionExtensions.cs  Timer.cs  TracePropagation.cs  Trigger.cs
src/Prosody/Configuration/: ClientMode.cs  ClientOptions.cs  ClientOptionsValidator.cs  SpanRelation.cs
src/Prosody/Errors/: IPermanentError.cs  PermanentErrorAttribute.cs  PermanentException.cs
src/Prosody/Extensions/: ProsodyServiceCollectionExtensions.cs
src/Prosody/Infrastructure/: CancellationHelper.cs  ErrorClass.cs  EventHandlerBridge.cs  LinkedCancellationSignal.cs  PermanentErrorResolver.cs  SentryConstants.cs  SentryIntegration.cs  TracePropagation.cs
src/Prosody/Logging/: LogHelper.cs  LogSinkBridge.cs  ProsodyLogging.cs
src/Prosody/Messaging/: ConsumerState.cs  IProsodyHandler.cs  Message.cs  ProsodyContext.cs  ProsodyTimer.cs  Timer.cs
src/Prosody/Native/: NativeRuntime.cs  SafeHandles.cs
test/: .editorconfig
test/Prosody.Tests/: GlobalUsings.cs  IntegrationTestBase.cs  Prosody.Tests.csproj  ProsodyClientTests.cs  TestConfiguration.cs  xunit.runner.json
test/Prosody.Tests/Integration/: ClientBasicsTests.cs  ErrorHandlingTests.cs  IntegrationTestBase.cs  MessageTests.cs  ProsodyClientTests.cs  TimerTests.cs
test/Prosody.Tests/Properties/: launchSettings.json
test/Prosody.Tests/TestHelpers/: ActivityListenerIsolationCollection.cs  EventNotifier.cs  FakeLoggerFactory.cs  IntegrationTestContext.cs  IntegrationTestFixture.cs  LoggingIsolationCollection.cs  MessageChannel.cs  MessageStream.cs  TestDefaults.cs  TestEventHandler.cs  TimerEventStream.cs  TopicGenerator.cs
test/Prosody.Tests/Unit/: ClientOptionsTests.cs  ClientOptionsValidatorTests.cs  ConsumerStateTests.cs  DisposalTests.cs  EnumTests.cs  EventHandlerBridgeTests.cs  EventHandlerBridgeTracingTests.cs  EventHandlerTests.cs  ExceptionTests.cs  FFITypesTests.cs  LogSinkBridgeTests.cs  LoggingTests.cs  ProsodyClientBuilderTests.cs  ProsodyClientOptionsBuilderTests.cs  ProsodyClientSendTests.cs  ProsodyHandlerTests.cs  ProsodyServiceCollectionExtensionsTests.cs  SentryCaptureBehaviorTests.cs
